Update info identification mail

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PORT=3000
 FIREBASE_SERVICE_ACCOUNT_KEY_PATH=D:\Dina\Cours_Master1_P10\ProjetFinal_Android_MrRojo_M1_P10\MadaTourisme-Back\Tourisme-Back\Tourisme-Back\mada-tourisme7-firebase-adminsdk-mx1vz-d69a153297.json
+
+EMAIL_USER=nandrianinaomega.itu@gmail.com
+EMAIL_PASS=idservemore
+
